impove profile doc
